--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/oed/avocado#readme",
   "dependencies": {
+    "ipfs": "^0.14.1",
     "ipfs-log": "^1.4.9",
     "tweetnacl": "^0.14.3"
   }
