--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A password manager on ipfs",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node_modules/.bin/mocha test/"
   },
   "repository": {
     "type": "git",
