--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/oed/avocado#readme",
   "dependencies": {
     "ipfs": "^0.14.1",
+    "ipfs-api": "^6.0.3",
     "ipfs-log": "^1.4.9",
     "tweetnacl": "^0.14.3"
   },
