--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   },
   "devDependencies": {
     "chai": "^3.5.0",
-    "mocca": "^1.0.3"
+    "mocha": "^3.1.2"
   },
   "bin": {
     "coconut": "./bin/cli.js"
