--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "ipfs-log": "latest",
     "orbit-db-feedstore": "latest",
     "prompt": "^1.0.0",
+    "strict-password-generator": "^1.1.0",
     "tweetnacl": "^0.14.3",
     "tweetnacl-util": "^0.13.3"
   },
