--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "mocha": "^3.1.2"
   },
   "bin": {
-    "coconut": "./bin/cli.js"
+    "coconut-cli": "./bin/cli.js",
+    "coconut-server": "./bin/server.js"
   }
 }
