--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "commander": "^2.9.0",
     "ipfs": "latest",
     "ipfs-api": "latest",
-    "ipfs-log": "latest",
-    "orbit-db-feedstore": "latest",
+    "orbit-db": "latest",
     "prompt": "^1.0.0",
     "strict-password-generator": "^1.1.0",
     "tweetnacl": "^0.14.3",
