--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "body-parser": "^1.16.1",
     "clipboardy": "^0.1.2",
     "commander": "^2.9.0",
+    "crypto-js": "^3.1.9-1",
     "express": "^4.14.1",
     "ipfs": "latest",
     "ipfs-api": "latest",
